# AutoFinResearchAgent

./: .env.example  .gitignore  README.md  pyproject.toml
autofin/: __init__.py  agent_runtime.py  cli.py  config.py  intent.py  intent_router.py  memory.py  policy.py  schemas.py  session.py
autofin/data/: __init__.py  sec_client.py
autofin/runtime/: __init__.py  orchestrator.py  permissions.py  skill_registry.py  trace.py
autofin/sandbox/: __init__.py  executor.py
autofin/skills/: __init__.py  base.py  sec_filing.py
autofin/web/: __init__.py  app.py  task_store.py
autofin/web/static/: app.js  index.html  styles.css
docs/: architecture.md  intent-routing.md  product-capabilities.md  session-memory-runtime.md  web-ui.md
tests/: test_agent_runtime.py  test_config.py  test_intent.py  test_intent_router.py  test_orchestrator.py  test_permissions.py  test_registry.py  test_sec_client.py  test_sec_filing_skill.py  test_session.py  test_web_app.py
