[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autofin-research-agent"
version = "0.1.0"
description = "A local-first, skill-based runtime for auditable financial research agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chongliu Jia" }]
dependencies = [
  "fastapi>=0.110.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-openai>=0.2.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
autofin = "autofin.cli:main"

[tool.setuptools.packages.find]
include = ["autofin*"]

[tool.setuptools.package-data]
"autofin.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
